# emu6502

./: .gitattributes  Cargo.toml  README.md
crates/e6502/: Cargo.toml
crates/e6502/src/: lib.rs  main.rs  types.rs
crates/e6502/src/debugger/: mod.rs
crates/e6502/src/hardware/: bus.rs  clock.rs  display.rs  keyboard.rs  memory.rs  mod.rs
crates/e6502/src/hardware/cpu/: mod.rs
crates/e6502/src/hardware/cpu/instructions/: arithmetic.rs  branch.rs  flag.rs  increment_decrement.rs  jump_call.rs  load_store.rs  logical.rs  mod.rs  shift.rs  stack_op.rs
crates/e6502/src/visualize/: mod.rs
crates/t6502/: Makefile  wozmon.s
crates/t6502/tests/: Makefile  flag.s  increment_decrement.s  load_store.s  logical.s  macros.s  setup.s  shift.s
src/: .gitignore  bus.rs  cpu.rs  lib.rs  main.rs  types.rs
src/hardware/: bus.rs  cpu.rs  display.rs  keyboard.rs  memory.rs  mod.rs  rom.rs
src/hardware/cpu/: mod.rs
src/hardware/cpu/instructions/: arithmetic.rs  branch.rs  flag.rs  increment_decrement.rs  jump_call.rs  load_store.rs  logical.rs  shift.rs  stack_op.rs
src/instruction/: arithmetic.rs  branch.rs  flag.rs  increment_decrement.rs  jump_call.rs  load_store.rs  logical.rs  mod.rs  shift.rs  stack_op.rs  system_fn.rs
src/routines/: .gitignore  6502_functional_test.lst  Makefile  cold_reset.asm  multiply.s  script.ld  wozmon.s
src/routines/tests/: .gitignore  Makefile  arithmetic.s  branch.s  configuration.s  flag.s  increment_decrement.s  jump_call.s  load_store.s  logical.s  macros.s  script.ld  shift.s  stack.s
src/visualize/: mod.rs
