[workspace]
members = ["crates/e6502"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
clap = { version = "4.4.15", features = ["derive"] }
console = "0.15.8"
phf = { version = "0.11.2", features = ["macros"] }
sdl2 = {version="0.36.0", features = ["ttf"]}

[profile.dev]
overflow-checks = false
